kajit/tests/snapshots/corpus__generated_ra_mir_postcard_tuple_triple_aarch64.snap
---
source: kajit/tests/corpus.rs
expression: ra_text
---
ra_func @0 { ; entry: b0
  block b0: ; insts: 23
    bounds_check(1)
    v1:gpr = const(0x7f)
    v3:gpr = const(0x80)
    v5:gpr = const(0x0)
    v37:gpr = const(0x0)
    v39:gpr = const(0x20)
    v41:gpr = const(0x0)
    v44:gpr = const(0x7f)
    v46:gpr = const(0x80)
    v48:gpr = const(0x0)
    v80:gpr = const(0x0)
    v82:gpr = const(0x20)
    v84:gpr = const(0x0)
    v87:gpr = const(0x7f)
    v89:gpr = const(0x80)
    v91:gpr = const(0x0)
    v123:gpr = const(0x0)
    v125:gpr = const(0x20)
    v127:gpr = const(0x0)
    v0:gpr = read_bytes(1)
    v2:gpr = And v0:gpr, v1:gpr
    v4:gpr = And v0:gpr, v3:gpr
    v6:gpr = CmpNe v4:gpr, v5:gpr
    term: branch_if_zero v6 -> b2, fallthrough b1 ; uses: [v6]
    succs: b2 [v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] b1 [v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 2
  block b1 [params: v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b0): ; insts: 0
    term: branch b3 ; uses: []
    succs: b3 [v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 1
  block b2 [params: v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b0): ; insts: 4
    v7:gpr = const(0x4)
    v8:gpr = const(0x0)
    v33:gpr = copy v2:gpr
    v36:gpr = copy v8:gpr
    term: branch b6 ; uses: []
    succs: b6 [v33, v8, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 1
  block b3 [params: v2, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b1): ; insts: 12
    v9:gpr = const(0x7)
    v10:gpr = const(0x4)
    v11:gpr = const(0x1)
    v13:gpr = const(0x7f)
    v17:gpr = const(0x7)
    v19:gpr = const(0x1)
    v21:gpr = const(0x80)
    v23:gpr = const(0x0)
    v25:gpr = const(0x0)
    v131:gpr = copy v2:gpr
    v132:gpr = copy v9:gpr
    v133:gpr = copy v10:gpr
    term: branch b4 ; uses: []
    succs: b4 [v13, v17, v19, v21, v23, v25, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127, v131, v132, v133] ; count: 1
  block b4 [params: v13, v17, v19, v21, v23, v25, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127, v131, v132, v133] (preds: b3, b4): ; insts: 16
    bounds_check(1)
    v18:gpr = Add v132:gpr, v17:gpr
    v20:gpr = Sub v133:gpr, v19:gpr
    v12:gpr = read_bytes(1)
    v26:gpr = CmpNe v20:gpr, v25:gpr
    v14:gpr = And v12:gpr, v13:gpr
    v22:gpr = And v12:gpr, v21:gpr
    v15:gpr = Shl v14:gpr, v132:gpr
    v24:gpr = CmpNe v22:gpr, v23:gpr
    v16:gpr = Or v131:gpr, v15:gpr
    v27:gpr = And v24:gpr, v26:gpr
    v131:gpr = copy v16:gpr
    v132:gpr = copy v18:gpr
    v133:gpr = copy v20:gpr
    v134:gpr = copy v14:gpr
    v135:gpr = copy v24:gpr
    term: branch_if v27 -> b4, fallthrough b5 ; uses: [v27]
    succs: b4 [v13, v17, v19, v21, v23, v25, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127, v131, v132, v133] b5 [v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127, v131, v135] ; count: 2
  block b5 [params: v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127, v131, v135] (preds: b4): ; insts: 2
    v33:gpr = copy v131:gpr
    v36:gpr = copy v135:gpr
    term: branch b6 ; uses: []
    succs: b6 [v33, v36, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 1
  block b6 [params: v33, v36, v37, v39, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b2, b5): ; insts: 2
    v38:gpr = CmpNe v36:gpr, v37:gpr
    v40:gpr = Shr v33:gpr, v39:gpr
    term: branch_if_zero v38 -> b8, fallthrough b7 ; uses: [v38]
    succs: b8 [v33, v40, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] b7 ; count: 2
  block b7 (preds: b6): ; insts: 0
    term: branch b9 ; uses: []
    succs: b9 ; count: 1
  block b8 [params: v33, v40, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b6): ; insts: 0
    term: branch b10 ; uses: []
    succs: b10 [v33, v40, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 1
  block b9 (preds: b7): ; insts: 0
    term: error_exit(InvalidVarint) ; uses: []
    succs: (none)
  block b10 [params: v33, v40, v41, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b8): ; insts: 1
    v42:gpr = CmpNe v40:gpr, v41:gpr
    term: branch_if_zero v42 -> b12, fallthrough b11 ; uses: [v42]
    succs: b12 [v33, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] b11 ; count: 2
  block b11 (preds: b10): ; insts: 0
    term: branch b13 ; uses: []
    succs: b13 ; count: 1
  block b12 [params: v33, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b10): ; insts: 0
    term: branch b14 ; uses: []
    succs: b14 [v33, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 1
  block b13 (preds: b11): ; insts: 0
    term: error_exit(NumberOutOfRange) ; uses: []
    succs: (none)
  block b14 [params: v33, v44, v46, v48, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b12): ; insts: 6
    store([0:W4]) v33:gpr
    bounds_check(1)
    v43:gpr = read_bytes(1)
    v45:gpr = And v43:gpr, v44:gpr
    v47:gpr = And v43:gpr, v46:gpr
    v49:gpr = CmpNe v47:gpr, v48:gpr
    term: branch_if_zero v49 -> b16, fallthrough b15 ; uses: [v49]
    succs: b16 [v45, v80, v82, v84, v87, v89, v91, v123, v125, v127] b15 [v45, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 2
  block b15 [params: v45, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b14): ; insts: 0
    term: branch b17 ; uses: []
    succs: b17 [v45, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 1
  block b16 [params: v45, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b14): ; insts: 4
    v50:gpr = const(0x4)
    v51:gpr = const(0x0)
    v76:gpr = copy v45:gpr
    v79:gpr = copy v51:gpr
    term: branch b20 ; uses: []
    succs: b20 [v76, v51, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 1
  block b17 [params: v45, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b15): ; insts: 12
    v52:gpr = const(0x7)
    v53:gpr = const(0x4)
    v54:gpr = const(0x1)
    v56:gpr = const(0x7f)
    v60:gpr = const(0x7)
    v62:gpr = const(0x1)
    v64:gpr = const(0x80)
    v66:gpr = const(0x0)
    v68:gpr = const(0x0)
    v138:gpr = copy v45:gpr
    v139:gpr = copy v52:gpr
    v140:gpr = copy v53:gpr
    term: branch b18 ; uses: []
    succs: b18 [v56, v60, v62, v64, v66, v68, v80, v82, v84, v87, v89, v91, v123, v125, v127, v138, v139, v140] ; count: 1
  block b18 [params: v56, v60, v62, v64, v66, v68, v80, v82, v84, v87, v89, v91, v123, v125, v127, v138, v139, v140] (preds: b17, b18): ; insts: 16
    bounds_check(1)
    v61:gpr = Add v139:gpr, v60:gpr
    v63:gpr = Sub v140:gpr, v62:gpr
    v55:gpr = read_bytes(1)
    v69:gpr = CmpNe v63:gpr, v68:gpr
    v57:gpr = And v55:gpr, v56:gpr
    v65:gpr = And v55:gpr, v64:gpr
    v58:gpr = Shl v57:gpr, v139:gpr
    v67:gpr = CmpNe v65:gpr, v66:gpr
    v59:gpr = Or v138:gpr, v58:gpr
    v70:gpr = And v67:gpr, v69:gpr
    v138:gpr = copy v59:gpr
    v139:gpr = copy v61:gpr
    v140:gpr = copy v63:gpr
    v141:gpr = copy v57:gpr
    v142:gpr = copy v67:gpr
    term: branch_if v70 -> b18, fallthrough b19 ; uses: [v70]
    succs: b18 [v56, v60, v62, v64, v66, v68, v80, v82, v84, v87, v89, v91, v123, v125, v127, v138, v139, v140] b19 [v80, v82, v84, v87, v89, v91, v123, v125, v127, v138, v142] ; count: 2
  block b19 [params: v80, v82, v84, v87, v89, v91, v123, v125, v127, v138, v142] (preds: b18): ; insts: 2
    v76:gpr = copy v138:gpr
    v79:gpr = copy v142:gpr
    term: branch b20 ; uses: []
    succs: b20 [v76, v79, v80, v82, v84, v87, v89, v91, v123, v125, v127] ; count: 1
  block b20 [params: v76, v79, v80, v82, v84, v87, v89, v91, v123, v125, v127] (preds: b16, b19): ; insts: 2
    v81:gpr = CmpNe v79:gpr, v80:gpr
    v83:gpr = Shr v76:gpr, v82:gpr
    term: branch_if_zero v81 -> b22, fallthrough b21 ; uses: [v81]
    succs: b22 [v76, v83, v84, v87, v89, v91, v123, v125, v127] b21 ; count: 2
  block b21 (preds: b20): ; insts: 0
    term: branch b23 ; uses: []
    succs: b23 ; count: 1
  block b22 [params: v76, v83, v84, v87, v89, v91, v123, v125, v127] (preds: b20): ; insts: 0
    term: branch b24 ; uses: []
    succs: b24 [v76, v83, v84, v87, v89, v91, v123, v125, v127] ; count: 1
  block b23 (preds: b21): ; insts: 0
    term: error_exit(InvalidVarint) ; uses: []
    succs: (none)
  block b24 [params: v76, v83, v84, v87, v89, v91, v123, v125, v127] (preds: b22): ; insts: 1
    v85:gpr = CmpNe v83:gpr, v84:gpr
    term: branch_if_zero v85 -> b26, fallthrough b25 ; uses: [v85]
    succs: b26 [v76, v87, v89, v91, v123, v125, v127] b25 ; count: 2
  block b25 (preds: b24): ; insts: 0
    term: branch b27 ; uses: []
    succs: b27 ; count: 1
  block b26 [params: v76, v87, v89, v91, v123, v125, v127] (preds: b24): ; insts: 0
    term: branch b28 ; uses: []
    succs: b28 [v76, v87, v89, v91, v123, v125, v127] ; count: 1
  block b27 (preds: b25): ; insts: 0
    term: error_exit(NumberOutOfRange) ; uses: []
    succs: (none)
  block b28 [params: v76, v87, v89, v91, v123, v125, v127] (preds: b26): ; insts: 6
    store([4:W4]) v76:gpr
    bounds_check(1)
    v86:gpr = read_bytes(1)
    v88:gpr = And v86:gpr, v87:gpr
    v90:gpr = And v86:gpr, v89:gpr
    v92:gpr = CmpNe v90:gpr, v91:gpr
    term: branch_if_zero v92 -> b30, fallthrough b29 ; uses: [v92]
    succs: b30 [v88, v123, v125, v127] b29 [v88, v123, v125, v127] ; count: 2
  block b29 [params: v88, v123, v125, v127] (preds: b28): ; insts: 0
    term: branch b31 ; uses: []
    succs: b31 [v88, v123, v125, v127] ; count: 1
  block b30 [params: v88, v123, v125, v127] (preds: b28): ; insts: 4
    v93:gpr = const(0x4)
    v94:gpr = const(0x0)
    v119:gpr = copy v88:gpr
    v122:gpr = copy v94:gpr
    term: branch b34 ; uses: []
    succs: b34 [v119, v94, v123, v125, v127] ; count: 1
  block b31 [params: v88, v123, v125, v127] (preds: b29): ; insts: 12
    v95:gpr = const(0x7)
    v96:gpr = const(0x4)
    v97:gpr = const(0x1)
    v99:gpr = const(0x7f)
    v103:gpr = const(0x7)
    v105:gpr = const(0x1)
    v107:gpr = const(0x80)
    v109:gpr = const(0x0)
    v111:gpr = const(0x0)
    v145:gpr = copy v88:gpr
    v146:gpr = copy v95:gpr
    v147:gpr = copy v96:gpr
    term: branch b32 ; uses: []
    succs: b32 [v99, v103, v105, v107, v109, v111, v123, v125, v127, v145, v146, v147] ; count: 1
  block b32 [params: v99, v103, v105, v107, v109, v111, v123, v125, v127, v145, v146, v147] (preds: b31, b32): ; insts: 16
    bounds_check(1)
    v104:gpr = Add v146:gpr, v103:gpr
    v106:gpr = Sub v147:gpr, v105:gpr
    v98:gpr = read_bytes(1)
    v112:gpr = CmpNe v106:gpr, v111:gpr
    v100:gpr = And v98:gpr, v99:gpr
    v108:gpr = And v98:gpr, v107:gpr
    v101:gpr = Shl v100:gpr, v146:gpr
    v110:gpr = CmpNe v108:gpr, v109:gpr
    v102:gpr = Or v145:gpr, v101:gpr
    v113:gpr = And v110:gpr, v112:gpr
    v145:gpr = copy v102:gpr
    v146:gpr = copy v104:gpr
    v147:gpr = copy v106:gpr
    v148:gpr = copy v100:gpr
    v149:gpr = copy v110:gpr
    term: branch_if v113 -> b32, fallthrough b33 ; uses: [v113]
    succs: b32 [v99, v103, v105, v107, v109, v111, v123, v125, v127, v145, v146, v147] b33 [v123, v125, v127, v145, v149] ; count: 2
  block b33 [params: v123, v125, v127, v145, v149] (preds: b32): ; insts: 2
    v119:gpr = copy v145:gpr
    v122:gpr = copy v149:gpr
    term: branch b34 ; uses: []
    succs: b34 [v119, v122, v123, v125, v127] ; count: 1
  block b34 [params: v119, v122, v123, v125, v127] (preds: b30, b33): ; insts: 2
    v124:gpr = CmpNe v122:gpr, v123:gpr
    v126:gpr = Shr v119:gpr, v125:gpr
    term: branch_if_zero v124 -> b36, fallthrough b35 ; uses: [v124]
    succs: b36 [v119, v126, v127] b35 ; count: 2
  block b35 (preds: b34): ; insts: 0
    term: branch b37 ; uses: []
    succs: b37 ; count: 1
  block b36 [params: v119, v126, v127] (preds: b34): ; insts: 0
    term: branch b38 ; uses: []
    succs: b38 [v119, v126, v127] ; count: 1
  block b37 (preds: b35): ; insts: 0
    term: error_exit(InvalidVarint) ; uses: []
    succs: (none)
  block b38 [params: v119, v126, v127] (preds: b36): ; insts: 1
    v128:gpr = CmpNe v126:gpr, v127:gpr
    term: branch_if_zero v128 -> b40, fallthrough b39 ; uses: [v128]
    succs: b40 [v119] b39 ; count: 2
  block b39 (preds: b38): ; insts: 0
    term: branch b41 ; uses: []
    succs: b41 ; count: 1
  block b40 [params: v119] (preds: b38): ; insts: 0
    term: branch b42 ; uses: []
    succs: b42 [v119] ; count: 1
  block b41 (preds: b39): ; insts: 0
    term: error_exit(NumberOutOfRange) ; uses: []
    succs: (none)
  block b42 [params: v119] (preds: b40): ; insts: 1
    store([8:W4]) v119:gpr
    term: return ; uses: []
    succs: (none)
}
